--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+amazon.dynamodb.endpoint=http://localhost:4566/
+amazon.aws.accesskey=test
+amazon.aws.secretkey=test
 
+spring.data.dynamodb.entity2ddl.auto = create-drop
+spring.data.dynamodb.entity2ddl.gsiProjectionType = ALL
+spring.data.dynamodb.entity2ddl.readCapacity = 10
+spring.data.dynamodb.entity2ddl.writeCapacity = 1
